--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,10 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+
+  image_picker: ^0.8.2
+  permission_handler: 8.1.4+2
+
   flutter:
     sdk: flutter
   simple_animations: ^1.3.3
