--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,9 +9,11 @@
    <uses-permission android:name="android.permission.CAMERA"/>
    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
    <uses-feature android:name="android.hardware.camera"/>
+   <uses-feature android:name="android.hardware.camera.ar"/>
    <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true"/>
    
    <application
+        android:name="io.flutter.app.FlutterApplication"
         android:label="firztair_by_theejutha"
         android:icon="@mipmap/ic_launcher">
         <activity
@@ -39,7 +41,7 @@
               android:resource="@drawable/launch_background"
               />
               <meta-data android:name="com.google.ar.core" android:value="required" />
-              
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
