--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   arkit_plugin: ^1.0.1
   carousel_slider: ^4.0.0
   flutter_svg: ^0.22.0
-  storyswiper: ^1.0.1
+  arcore_flutter_plugin:
 
 dev_dependencies:
   flutter_test:
