--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,7 @@ dependencies:
   arkit_plugin: ^1.0.1
   carousel_slider: ^4.0.0
   flutter_svg: ^0.22.0
-<<<<<<< HEAD
-  arcore_flutter_plugin:
-=======
->>>>>>> 03f75f44d3267b92c1cde7a7605d5581e1df1627
+  flutter_tts: ^3.2.2
 
 dev_dependencies:
   flutter_test:
