--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   carousel_slider: ^4.0.0
   flutter_svg: ^0.22.0
   flutter_tts: ^3.2.2
+  arcore_flutter_plugin:
 
 dev_dependencies:
   flutter_test:
