--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
 
@@ -35,10 +35,14 @@ dependencies:
   arkit_plugin: ^1.0.1
   carousel_slider: ^4.0.0
   flutter_svg: ^0.22.0
+  font_awesome_flutter: ^9.2.0
+  google_fonts: ^2.1.0
+  flutter_tts: ^3.3.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
