--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,13 +21,11 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-
-  image_picker: ^0.8.2
-  permission_handler: 8.1.4+2
-
   flutter:
     sdk: flutter
   simple_animations: ^1.3.3
+  image_picker: ^0.8.2
+  permission_handler: 8.1.4+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,6 +36,7 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   google_fonts: ^2.1.0
   flutter_tts: ^3.3.1
+  arcore_flutter_plugin:
 
 dev_dependencies:
   flutter_test:
