--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,17 @@ dependencies:
   flutter:
     sdk: flutter
   simple_animations: ^1.3.3
-  image_picker: ^0.8.2
+  image_picker: 
   permission_handler: 8.1.4+2
+  sensors_plus:
+  provider: ^5.0.0
+  syncfusion_flutter_charts: ^19.3.48
+  countdown_flutter: ^0.1.2
+  flutter_sparkline: ^0.1.0
+  animator: ^3.1.0
+  stop_watch_timer: ^1.3.1
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -35,7 +44,7 @@ dependencies:
   flutter_svg: ^0.22.0
   font_awesome_flutter: ^9.2.0
   google_fonts: ^2.1.0
-  flutter_tts: ^3.3.1
+  flutter_tts: ^3.3.2
   arcore_flutter_plugin:
 
 dev_dependencies:
